# topo-ae-distances

./: Makefile  Pipfile  README.md  pyproject.toml  requirements.txt
exp/: hypersearch_configs.py  train_model.py
exp/ingredients/: dataset.py  model.py
projection_experiments/hyperparameter_search/real_world/CIFAR/: TopoAERandomConv.json
projection_experiments/hyperparameter_search/real_world/FashionMNIST/: TopoAERandomConv.json
projection_experiments/hyperparameter_search/real_world/MNIST/: TopoAERandomConv.json
scripts/: create_TopoAERandomConv_hyperparameter_search.sh  create_simulated_ortho_search.sh  results.py  run_manual.sh  run_ortho.sh  run_ortho_pca_real.sh  run_ortho_pca_spheres.sh  run_ortho_vgg_real.sh  run_slurm.sh  run_spheres.sh  test_ortho.sh
src/datasets/topo_dataset/: spheres.py
src/models/: __init__.py  approx_based.py  distances.py  submodules.py
